# palma_voluum

./: .gitignore  Pipfile  broadcast.py  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
configs/: Offer.json  Report.json  ReportConversions.json
models/: Offer.py  Report.py  ReportConversions.py  ReportConversions2.py  models.py
templates/: update_from_stage.sql.j2
test/: test_auto.py  test_manual copy.py  test_manual.py  test_units.py  utils.py
